# AgentKit

./: .gitignore  README.en.md  README.md  pyproject.toml
.github/workflows/: agentkit-ci.yml
configs/: module_rules.yaml  policy_rules.yaml  runtime.yaml  skills_index.yaml  system_profile.yaml
docs/: BOOTSTRAP.md  EXAMPLE_GENERATED_OUTPUT.md  Pipeline设计.md  STARTER.md
docs/templates/: decision_log.md  handoff_note.md  milestone_report.md  project_charter.md  risk_register.md  task_model.md
examples/: api_enforced_demo.py  apply_spec.yaml  context_selection_demo.py  mock_pipeline.py  task.codegen.sample.yaml  task.sample.yaml
scripts/: llm_codegen_stub.py  run_api_only_flow.ps1
src/agentkit/: __init__.py  __main__.py
src/agentkit/config/: loader.py  models.py
src/agentkit/docs/: __init__.py  bootstrap.py  fill_engine.py  models.py  registry.py  renderer.py  service.py  template_loader.py  update_strategies.py  writer.py
src/agentkit/runner/: __init__.py  api.py  doctor_cli.py  env_check.py  error_feedback.py  (+7 more)
tests/: test_context_selector.py  test_document_rendering.py  test_error_feedback.py  test_fill_engine.py  test_registry_loading.py  test_runner_api_only_protocol.py  test_runner_api_server.py  test_runner_env_check.py  test_runner_pipeline.py  test_runner_strict_codegen.py  test_runner_strict_production.py  test_runtime_codegen_flow.py  test_runtime_dispatcher.py  test_runtime_happy_path.py  test_runtime_replan_branch.py  test_schema_validation.py  test_starter_apply.py  test_starter_clean.py  test_starter_init.py  test_starter_migrate.py
(+25 files in other folders)
