[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentkit"
version = "0.1.0"
description = "Migration-friendly starter kit for agent pipeline projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
agentkit-init = "agentkit.starter.cli:main"
agentkit-apply = "agentkit.starter.apply_cli:main"
agentkit-migrate = "agentkit.starter.migrate_cli:main"
agentkit-clean = "agentkit.starter.clean_cli:main"
agentkit-run = "agentkit.runner.run_cli:main"
agentkit-verify = "agentkit.runner.verify_cli:main"
agentkit-serve = "agentkit.runner.serve_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
